BUILD.log
--------------- Build Started: 11/27/2021 20:14:22 Project: reaction_game_erika, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Mateo C. Querol\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\Mateo C. Querol\Desktop\reaction_game_erika.cydsn\reaction_game_erika.cyprj" -d CY8C5888LTQ-LP097 -s "C:\Users\Mateo C. Querol\Desktop\reaction_game_erika.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: sdb.M0065: information: Analog terminal "vdac_ref" on ADC_SAR_SEQ_v2_10 is unconnected.
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.4\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\ADC_SAR_SEQ_v2_10\PSoC5\ADC_SAR_SEQ_v2_10.cysch (Signal: vdac_ref)
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.4\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\ADC_SAR_SEQ_v2_10\PSoC5\ADC_SAR_SEQ_v2_10.cysch (Shape_798)
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.4\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\ADC_SAR_SEQ_v2_10\PSoC5\ADC_SAR_SEQ_v2_10.cysch (Shape_885)
ADD: fit.M0032: warning: Clock Warning: (TFT_SPI_IntClock's accuracy range '72 MHz +/- 0.25%, (71.82 MHz - 72.18 MHz)' is not within the specified tolerance range '66 MHz +/- 5%, (62.7 MHz - 69.3 MHz)'.).
 * C:\Program Files (x86)\Cypress\PSoC Creator\4.4\PSoC Creator\psoc\content\CyComponentLibrary\CyComponentLibrary.cylib\SPI_Master_v2_50\SPI_Master_v2_50.cysch (Instance:IntClock)
 * C:\Users\Mateo C. Querol\Desktop\reaction_game_erika.cydsn\reaction_game_erika.cydwr (TFT_SPI_IntClock)
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Info: apr.M0002: Analog signal "Net_1725" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1744" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1774" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1753" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1754" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1777" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1757" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1758" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1793" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1761" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1762" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1794" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1703" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1704" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1764" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1707" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1708" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1765" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1711" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1712" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1766" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1715" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1716" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1767" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1719" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1720" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1768" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1724" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1726" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1769" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1729" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1730" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1770" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1733" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1734" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1771" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1737" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1738" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1772" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1741" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1742" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1773" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1746" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1748" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1775" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1751" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1776" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1778" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1779" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1780" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1781" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1782" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1783" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1784" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1785" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1786" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1787" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1788" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1789" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1790" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1791" is connected to one terminal only. (App=cydsfit)
Info: apr.M0002: Analog signal "Net_1792" is connected to one terminal only. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 35% done. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 80% done. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
Warning: sta.M0019: reaction_game_erika_timing.html: Warning-1366: Setup time violation found in a path from clock ( TFT_SPI_IntClock ) to clock ( TFT_SPI_IntClock ). (File=C:\Users\Mateo C. Querol\Desktop\reaction_game_erika.cydsn\reaction_game_erika_timing.html)
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I.\source\asw -I.\source\bsw -I.\source\bsw\TraceRecorder -I.\source\bsw\TraceRecorder\config -I.\source\bsw\TraceRecorder\include -I.\source\bsw\TraceRecorder\streamport -I.\source\bsw\LabBoard -I.\source\bsw\Services -I.\source\bsw\tft -I.\source\bsw\tft\fonts -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c source\asw\main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
In file included from Generated_Source\PSoC5/ErikaOS_1_ee_irq.inc:96:0,
                 from Generated_Source\PSoC5/ErikaOS_1_ee.h:137,
                 from Generated_Source\PSoC5/project.h:22,
                 from source\asw\main.c:12:
source\asw\main.c: In function 'main':
Generated_Source\PSoC5/ErikaOS_1_cortex_mx_ee_irq.inc:182:6: error: static declaration of 'ISR2_isr_Button' follows non-static declaration
 void ISR2_ ## f(void)
      ^
source\asw\main.c:157:1: note: in expansion of macro 'ISR2'
 ISR2(isr_Button)
 ^
Generated_Source\PSoC5/ErikaOS_1_cortex_mx_ee_irq.inc:174:6: note: previous declaration of 'ISR2_isr_Button' was here
 void ISR2_ ## f(void);  \
      ^
source\asw\main.c:157:1: note: in expansion of macro 'ISR2'
 ISR2(isr_Button)
 ^
source\asw\main.c:160:1: error: expected declaration or statement at end of input
 }
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 11/27/2021 20:14:42 ---------------
